--- a/pyt-contabilidad/pyt-common/pom.xml
+++ b/pyt-contabilidad/pyt-common/pom.xml
@@ -23,4 +23,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>${project.build.compile.version}</source>
+					<target>${project.build.compile.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
