--- a/pyt-contabilidad/pyt-service/pom.xml
+++ b/pyt-contabilidad/pyt-service/pom.xml
@@ -30,4 +30,17 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+		<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>${project.build.compile.version}</source>
+					<target>${project.build.compile.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
