dev Se agrega sistema de comunicacion, singleton y subsriptores para poder usar el sistema de injeccion invertida.

--- a/pyt-contabilidad/pyt-app/.classpath
+++ b/pyt-contabilidad/pyt-app/.classpath
@@ -13,15 +13,23 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src/resource"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_73/lib/ext/jfxrt.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.oracle"/>
+			<attribute name="maven.artifactId" value="javafx"/>
+			<attribute name="maven.version" value="2.2"/>
+			<attribute name="maven.scope" value="system"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
