--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -37,12 +37,18 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>javafx</artifactId>
-			<version>2.2</version>
-			<systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
-			<scope>system</scope>
+			<groupId>co.com.pyt.query</groupId>
+			<artifactId>pyt-query</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.oracle</groupId> -->
+<!-- 			<artifactId>javafx</artifactId> -->
+<!-- 			<version>2.2</version> -->
+<!-- 			<systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath> -->
+<!-- 			<scope>system</scope> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
