--- a/pyt-contabilidad/pyt-query/pom.xml
+++ b/pyt-contabilidad/pyt-query/pom.xml
@@ -12,7 +12,7 @@
   		<groupId>co.com.pyt</groupId>
   		<artifactId>pyt-common</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
-  		<scope>compile</scope>
+  		<scope>runtime</scope>
   	</dependency>
   </dependencies>
 </project>
