--- a/pyt-contabilidad/pyt-app/.classpath
+++ b/pyt-contabilidad/pyt-app/.classpath
@@ -15,6 +15,7 @@
 	<classpathentry kind="src" path="src/resource"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -23,5 +24,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="properties"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
