--- a/pyt-contabilidad/pyt-query/pom.xml
+++ b/pyt-contabilidad/pyt-query/pom.xml
@@ -1,18 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>co.com.pyt</groupId>
-    <artifactId>pyt-contabilidad</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>co.com.pyt.query</groupId>
-  <artifactId>pyt-query</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>co.com.pyt</groupId>
-  		<artifactId>pyt-common</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  		<scope>runtime</scope>
-  	</dependency>
-  </dependencies>
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>co.com.pyt</groupId>
+		<artifactId>pyt-contabilidad</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>co.com.pyt</groupId>
+	<artifactId>pyt-query</artifactId>
+	<version>${project.version}</version>
+	<name>pyt-query</name>
+	<dependencies>
+		<dependency>
+			<groupId>co.com.pyt</groupId>
+			<artifactId>pyt-common</artifactId>
+			<version>${project.version}</version>
+			<scope>${project.scope}</scope>
+		</dependency>
+	</dependencies>
 </project>
