POI El desarrollo se ajusta proyecto para usar el processador de servicios de arquitectura y se usa la lista generada para mostrar la lista de servicios.

--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -40,6 +40,12 @@
 			<version>${project.version}</version>
 			<scope>${project.scope}</scope>
 		</dependency>
+		<dependency>
+			<groupId>co.com.arquitectura.librerias</groupId>
+			<artifactId>arquitecrura-librerias</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>${project.scope}</scope>
+		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>com.oracle</groupId> -->
 		<!-- <artifactId>javafx</artifactId> -->
