--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -44,7 +44,7 @@
 			<groupId>co.com.arquitectura.librerias</groupId>
 			<artifactId>arquitecrura-librerias</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-			<scope>${project.scope}</scope>
+			<scope>provided</scope>
 		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>com.oracle</groupId> -->
@@ -68,6 +68,12 @@
 				<configuration>
 					<source>${project.build.compile.version}</source>
 					<target>${project.build.compile.version}</target>
+					<generatedSourcesDirectory>${project.build.directory}/generated-resources/</generatedSourcesDirectory>
+					<annotationProcessors>
+						<annotationProcessor>
+							org.pyt.common.proccesor.FXMLFileProccessor
+						</annotationProcessor>
+					</annotationProcessors>
 				</configuration>
 			</plugin>
 <!-- 			<plugin> -->
