POI Se encarga de ajustar para la configuracion de los loggers de impresion, ademas de ajustr para actualizacion de datos y algunos procesos de mejoras.

--- a/pyt-contabilidad/pyt-service/pom.xml
+++ b/pyt-contabilidad/pyt-service/pom.xml
@@ -57,6 +57,13 @@
 						<annotationProcessor>
 							co.com.arquitectura.proccessor.implement.ServiceProccessor
 						</annotationProcessor>
+						<annotationProcessor>
+							org.pyt.common.proccesor.DelClassProccessor
+						</annotationProcessor>
+						<annotationProcessor>
+							org.pyt.common.proccesor.UpdClassProccessor
+						</annotationProcessor>
+
 					</annotationProcessors>
 				</configuration>
 			</plugin>
