--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -60,6 +60,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>easy-accounting</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
