--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -19,8 +19,8 @@
 <!-- 		<project.version>0.0.1-SNAPSHOT</project.version> -->
 <!-- 		<project.scope>runtime</project.scope> -->
 <!-- USED FOR COMPILATION, TO BUILD VERSION  -->
-<!-- 		<project.scope>provided</project.scope> -->
-		<project.scope>compile</project.scope>
+		<project.scope>provided</project.scope>
+<!-- 		<project.scope>compile</project.scope> -->
 <!-- 		<project.scope>system</project.scope> -->
 	</properties>
 	<dependencies>
@@ -38,11 +38,11 @@
 
 	</dependencies>
 	<modules>
-		<module>ea-constantes</module>
-		<module>ea-anotaciones</module>
-		<module>ea-exceptions</module>
-		<module>ea-dto</module>
-		<module>ea-poi</module>
+		<module>../ea-constantes</module>
+		<module>../ea-anotaciones</module>
+		<module>../ea-exceptions</module>
+		<module>../ea-dto</module>
+		<module>../ea-poi</module>
 		<module>pyt-common</module>
 		<module>pyt-query</module>
 		<module>pyt-service</module>
