--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -26,25 +26,30 @@
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-service</artifactId>
 			<version>${project.version}</version>
-			<scope>${project.scope}</scope>
+<!-- 			<scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-common</artifactId>
 			<version>${project.version}</version>
-			<scope>${project.scope}</scope>
+<!-- 			<scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-query</artifactId>
 			<version>${project.version}</version>
-			<scope>${project.scope}</scope>
+<!-- 			<scope>${project.scope}</scope> -->
+		</dependency>
+		<dependency>
+			<groupId>co.com.japl.ea</groupId>
+			<artifactId>ea-loader</artifactId>
+			<version>${project.version}</version>
+<!-- 			<scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.arquitectura.librerias</groupId>
 			<artifactId>arquitecrura-librerias</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
 		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>com.oracle</groupId> -->
@@ -94,7 +99,7 @@
 				<configuration>
 					<source>${project.build.compile.version}</source>
 					<target>${project.build.compile.version}</target>
-					<generatedSourcesDirectory>${project.build.directory}/generated-resources/</generatedSourcesDirectory>
+					<generatedSourcesDirectory>${project.build.directory}/src/main/java/</generatedSourcesDirectory>
 					<annotationProcessors>
 						<annotationProcessor>
 							co.com.arquitectura.proccessor.implement.FXMLFileProccessor
