--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -22,29 +22,35 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
 		<dependency>
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-service</artifactId>
 			<version>${project.version}</version>
-<!-- 			<scope>${project.scope}</scope> -->
+			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-common</artifactId>
 			<version>${project.version}</version>
-<!-- 			<scope>${project.scope}</scope> -->
+			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-query</artifactId>
 			<version>${project.version}</version>
-<!-- 			<scope>${project.scope}</scope> -->
+			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.japl.ea</groupId>
 			<artifactId>ea-loader</artifactId>
 			<version>${project.version}</version>
-<!-- 			<scope>${project.scope}</scope> -->
+			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>co.com.arquitectura.librerias</groupId>
