DBH2 Se realializa ajuste de librerias para separar el codigo de almacenamiento de la interfaz para poder crear varios componentes de almacenamiento para ser usados en un fututro

--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -45,6 +45,7 @@
 		<module>../ea-poi</module>
 		<module>pyt-common</module>
 		<module>pyt-query</module>
+		<module>../ea-file-bin</module>
 		<module>pyt-service</module>
 		<module>pyt-app</module>
 	</modules>
