dbh2 Se GREGA PROYECTO PARA MANEJO DE BD H2

--- a/pyt-contabilidad/pyt-service/pom.xml
+++ b/pyt-contabilidad/pyt-service/pom.xml
@@ -69,6 +69,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>co.com.japl.ea</groupId>
+			<artifactId>ea-file-bin</artifactId>
+			<version>1.2.1-BETA</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
