DBH2 Se agrega nuevo proyecto y ajustes para un futuro uso correcto de los modulos, ademas de codigo para tener ejb configurados por archivos con anotaccion inject para evitar ajustes y cambios a futuro de anotaciones

--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -45,7 +45,10 @@
 		<module>../ea-poi</module>
 		<module>pyt-common</module>
 		<module>pyt-query</module>
+		<module>../ea-H2-mem</module>
 		<module>../ea-file-bin</module>
+		<module>../ea-loader</module>
+		<module>../ea-write-logger</module>
 		<module>pyt-service</module>
 		<module>pyt-app</module>
 	</modules>
