--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -118,6 +118,11 @@
 			<artifactId>ea-file-bin</artifactId>
 			<version>1.2.1-BETA</version>
 		</dependency>
+		<dependency>
+			<groupId>co.com.japl.ea</groupId>
+			<artifactId>ea-H2-mem</artifactId>
+			<version>1.2.1-BETA</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
