DBH2 Se agrega el inicio (Splash) a la aplicación son necesarios los retoques pero se estable como debe iniciar y que se debe realizar en ese momento y como es la transicion para mostrar la aplicacion.

--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -158,7 +158,7 @@
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>
-								org.pyt.app.load.App
+								org.ea.app.load.Main
 							</mainClass>
 						</manifest>
 					</archive>
