--- a/ea-H2-mem/pom.xml
+++ b/ea-H2-mem/pom.xml
@@ -36,5 +36,18 @@
 			<artifactId>ea-constantes</artifactId>
 			<version>1.2.1-BETA</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.2.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.25.0-GA</version>
+		</dependency>
+
 	</dependencies>
 </project>
