DBH2 Se agrega codigo que se ejecuta al inicio de la aplicacion para verificar la existencia de tablas.

--- a/ea-H2-mem/h2.properties
+++ b/ea-H2-mem/h2.properties
@@ -3,3 +3,4 @@ hibernate.config.xml=hibernate.cfg.xml
 hibernate.connection.url=jdbc:h2:~/account.db
 hibernate.connection.username=
 hibernate.connection.password=
+backup.file.name=backup-file.bkp
