--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -52,6 +52,7 @@
 		<module>../ea-file-bin</module>
 		<module>../ea-loader</module>
 		<module>../ea-write-logger</module>
+		<module>ea-mybatis</module>
 		<module>pyt-service</module>
 		<module>pyt-app</module>
 	</modules>
