DBH2 Se realiza ajuste del nuevo modulo de gestion de base de datos

--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -55,6 +55,9 @@
 		<module>ea-mybatis</module>
 		<module>pyt-service</module>
 		<module>pyt-app</module>
+		<module>../ea-sql</module>
+		
+		<module>ea-gdb</module>
 	</modules>
 	<build>
 		<plugins>
