DBH2 caambio de nombre de modulo

--- a/ea-H2-mem/.project
+++ b/ea-H2-mem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ea-H2-mem</name>
+	<name>ea-hibernate</name>
 	<comment></comment>
 	<projects>
 	</projects>
