--- a/pyt-contabilidad/pom.xml
+++ b/pyt-contabilidad/pom.xml
@@ -23,7 +23,9 @@
 		<!-- <project.scope>compile</project.scope> -->
 		<!-- <project.scope>system</project.scope> -->
 <!-- 		<project.connect.model>ea-file-bin</project.connect.model> -->
-		<project.connect.model>ea-H2-mem</project.connect.model>
+<!-- 		<project.connect.model>ea-hibernate</project.connect.model> -->
+<!-- 		<project.connect.model>ea-mybatis</project.connect.model> -->
+		<project.connect.model>ea-gdb</project.connect.model>
 		<project.connect.version>${project.version}</project.connect.version>
 	</properties>
 	<dependencies>
@@ -48,11 +50,12 @@
 		<module>../ea-poi</module>
 		<module>pyt-common</module>
 		<module>pyt-query</module>
-		<module>../ea-H2-mem</module>
+		<module>ea-hibernate</module>
 		<module>../ea-file-bin</module>
 		<module>../ea-loader</module>
 		<module>../ea-write-logger</module>
 		<module>ea-mybatis</module>
+		<module>ea-gdb</module>
 		<module>pyt-service</module>
 		<module>pyt-app</module>
 		<module>../ea-sql</module>
