DBH2 Se agrega configuracion de obtener los nombres de los campos

--- a/pyt-contabilidad/ea-gdb/names-sql.properties
+++ b/pyt-contabilidad/ea-gdb/names-sql.properties
@@ -1,2 +1,14 @@
-com.pyt.service.dto.ParametroDTO=TBL_PARAMETER
 org.pyt.common.abstracts.ADto.codigo=SCODE
+org.pyt.common.abstracts.ADto.fechaCreacion=dcreate
+org.pyt.common.abstracts.ADto.fechaActualizacion=dupdate
+org.pyt.common.abstracts.ADto.fechaEliminacion=ddelete
+org.pyt.common.abstracts.ADto.creador=screater
+org.pyt.common.abstracts.ADto.actualizador=supdater
+org.pyt.common.abstracts.ADto.eliminador=sdeleter
+com.pyt.service.dto.ParametroDTO=TBL_PARAMETER
+com.pyt.service.dto.ParametroDTO.nombre=sname
+com.pyt.service.dto.ParametroDTO.descripcion=sdescription
+com.pyt.service.dto.ParametroDTO.valor=svalue
+com.pyt.service.dto.ParametroDTO.valor2=svalue2
+com.pyt.service.dto.ParametroDTO.grupo=sgroup
+com.pyt.service.dto.ParametroDTO.estado=sstate
