DBH2 se realiza la configuracion para para poder realizar CRUD con sql personalizados , tiene pruebas de parametros y funciona las consultas.

--- a/pyt-contabilidad/ea-gdb/names-sql.properties
+++ b/pyt-contabilidad/ea-gdb/names-sql.properties
@@ -11,4 +11,5 @@ com.pyt.service.dto.ParametroDTO.descripcion=sdescription
 com.pyt.service.dto.ParametroDTO.valor=svalue
 com.pyt.service.dto.ParametroDTO.valor2=svalue2
 com.pyt.service.dto.ParametroDTO.grupo=sgroup
-com.pyt.service.dto.ParametroDTO.estado=sstate
+com.pyt.service.dto.ParametroDTO.estado=nstate
+com.pyt.service.dto.ParametroDTO.orden=norder
