DBH2 Se agrega el git ignore para que ignore archivos class

--- a/pyt-contabilidad/pyt-app/.gitignore
+++ b/pyt-contabilidad/pyt-app/.gitignore
@@ -8,3 +8,19 @@
 /systemData/
 /systemFile/
 /output_repuestos.csv
+/hs_err_pid11503.log
+/hs_err_pid1421.log
+/hs_err_pid1705.log
+/hs_err_pid17565.log
+/hs_err_pid18007.log
+/hs_err_pid19001.log
+/hs_err_pid19382.log
+/hs_err_pid19841.log
+/hs_err_pid22530.log
+/hs_err_pid23127.log
+/hs_err_pid27424.log
+/hs_err_pid30936.log
+/hs_err_pid31193.log
+/hs_err_pid31562.log
+/hs_err_pid32616.log
+/hs_err_pid7630.log
