DBH2 Se realiza ajustes para poder realizar consultas en la base de datos y obtener los registros para de con sus registros anidados de objetos tipo adto, con esto se obtiene el arbol completo en las consutlas realizadas.

--- a/pyt-contabilidad/ea-gdb/names-sql.properties
+++ b/pyt-contabilidad/ea-gdb/names-sql.properties
@@ -13,3 +13,12 @@ com.pyt.service.dto.ParametroDTO.valor2=svalue2
 com.pyt.service.dto.ParametroDTO.grupo=sgroup
 com.pyt.service.dto.ParametroDTO.estado=nstate
 com.pyt.service.dto.ParametroDTO.orden=norder
+com.pyt.service.dto.BancoDTO=TBL_BANK
+com.pyt.service.dto.BancoDTO.nombre=sname
+com.pyt.service.dto.BancoDTO.descripcion=sdescription
+com.pyt.service.dto.BancoDTO.numeroCuenta=snumberaccount
+com.pyt.service.dto.BancoDTO.fechaApertura=dopening
+com.pyt.service.dto.BancoDTO.fechaCierre=dclosing
+com.pyt.service.dto.BancoDTO.estado=sstate
+com.pyt.service.dto.BancoDTO.tipoCuenta=stypeaccount
+com.pyt.service.dto.BancoDTO.tipoBanco=stypebank
