DBH2 Se agregan campos y tables en el archivo para poder realizar crud sobre la base de datos.

--- a/pyt-contabilidad/ea-gdb/names-sql.properties
+++ b/pyt-contabilidad/ea-gdb/names-sql.properties
@@ -22,3 +22,93 @@ com.pyt.service.dto.BancoDTO.fechaCierre=dclosing
 com.pyt.service.dto.BancoDTO.estado=sstate
 com.pyt.service.dto.BancoDTO.tipoCuenta=stypeaccount
 com.pyt.service.dto.BancoDTO.tipoBanco=stypebank
+com.pyt.service.dto.ActividadIcaDTO=TBL_ICA_ACTIVITY
+com.pyt.service.dto.ActividadIcaDTO.base=sbase
+com.pyt.service.dto.ActividadIcaDTO.codigoIca=sicacode
+com.pyt.service.dto.ActividadIcaDTO.descripcion=sdescription
+com.pyt.service.dto.ActividadIcaDTO.nombe=sname
+com.pyt.service.dto.ActividadIcaDTO.tarifa=srate
+com.pyt.service.dto.AsociacionArchivoDTO=TBL_ASSOCIATION_ARCHIVE
+com.pyt.service.dto.AsociacionArchivoDTO.archivo=sfile
+com.pyt.service.dto.AsociacionArchivoDTO.nombre=sname
+com.pyt.service.dto.CentroCostoDTO=TBL_CENTER_COST
+com.pyt.service.dto.CentroCostoDTO.descripcion=sdescriiption
+com.pyt.service.dto.CentroCostoDTO.empresa=senterprise
+com.pyt.service.dto.CentroCostoDTO.estado=sstate
+com.pyt.service.dto.CentroCostoDTO.nombre=sname
+com.pyt.service.dto.CentroCostoDTO.orden=norden
+com.pyt.service.dto.CiudadDTO=TBL_CITY
+com.pyt.service.dto.CiudadDTO.departamento=sdepartament
+com.pyt.service.dto.CiudadDTO.nombre=sname
+com.pyt.service.dto.ConceptoDTO=TBL_CONCEPT
+com.pyt.service.dto.ConceptoDTO.cuentaGasto=sbilltopay
+com.pyt.service.dto.ConceptoDTO.cuentaXPagar=sexpenseaccount
+com.pyt.service.dto.ConceptoDTO.descripcion=sdescription
+com.pyt.service.dto.ConceptoDTO.empresa=senterprise
+com.pyt.service.dto.ConceptoDTO.estado=sstate
+com.pyt.service.dto.ConceptoDTO.nombre=sname
+com.pyt.service.dto.ConceptoDTO.subconcepto=ssubconcept
+com.pyt.service.dto.ConfiguracionDTO=TBL_CONFIGURATION
+com.pyt.service.dto.ConfiguracionDTO.archivo=sfile
+com.pyt.service.dto.ConfiguracionDTO.archivoSalida=soutputfile
+com.pyt.service.dto.ConfiguracionDTO.configuracion=sconfiguration
+com.pyt.service.dto.ConfiguracionDTO.descripcion=sdescripcion
+com.pyt.service.dto.ConfiguracionDTO.report=nreport
+com.pyt.service.dto.CuentaContableDTO=TBL_ACCOUNTING_ACCOUNT
+com.pyt.service.dto.CuentaContableDTO.asociado=sassociated
+com.pyt.service.dto.CuentaContableDTO.codigoCuenta=scodeaccount
+com.pyt.service.dto.CuentaContableDTO.empresa=senterprise
+com.pyt.service.dto.CuentaContableDTO.naturaleza=snature
+com.pyt.service.dto.CuentaContableDTO.nombre=sname
+com.pyt.service.dto.CuentaContableDTO.tipo=stype
+com.pyt.service.dto.CuentaContableDTO.tipoPlanContable=splantype
+com.pyt.service.dto.DepartamentoDTO=TBL_DEPARTAMENT
+com.pyt.service.dto.DepartamentoDTO.nombre=sname
+com.pyt.service.dto.DepartamentoDTO.pais=scountry
+com.pyt.service.dto.DetalleConceptoDTO=TBL_CONCEPT_DETAIL
+com.pyt.service.dto.DetalleConceptoDTO.actividadIca=sicaactivity
+com.pyt.service.dto.DetalleConceptoDTO.baseImpoConsumo=nbaseconsumptiontax
+com.pyt.service.dto.DetalleConceptoDTO.centroCosto=scostcenter
+com.pyt.service.dto.DetalleConceptoDTO.codigoDocumento=scodedocument
+com.pyt.service.dto.DetalleConceptoDTO.concepto=sconcept
+com.pyt.service.dto.DetalleConceptoDTO.descripcion=sdescription
+com.pyt.service.dto.DetalleConceptoDTO.observacion=sobservation
+com.pyt.service.dto.DetalleConceptoDTO.porcentajeIVa=nivapercent
+com.pyt.service.dto.DetalleConceptoDTO.renglon=nrow
+com.pyt.service.dto.DetalleConceptoDTO.tarifaActividadIca=nrateicaactivity
+com.pyt.service.dto.DetalleConceptoDTO.tercero=sthird
+com.pyt.service.dto.DetalleConceptoDTO.tipoConcepto=sconepttype
+com.pyt.service.dto.DetalleConceptoDTO.valorBruto=ngrossvalue
+com.pyt.service.dto.DetalleConceptoDTO.valorDescuento=ndiscountvalue
+com.pyt.service.dto.DetalleConceptoDTO.valorIpoConsumo=nconsumptiontaxvalue
+com.pyt.service.dto.DetalleConceptoDTO.valorIva=nivavalue
+com.pyt.service.dto.DetalleConceptoDTO.valorNeto=nnetworth
+com.pyt.service.dto.DetalleContableDTO=TBL_ACCOUNTING_DETAIL
+com.pyt.service.dto.DetalleContableDTO.codigoDocumento=scodedocument
+com.pyt.service.dto.DetalleContableDTO.concepto=sconcept
+com.pyt.service.dto.DetalleContableDTO.cuentaContable=saccountingaccount
+com.pyt.service.dto.DetalleContableDTO.observacion=sobservation
+com.pyt.service.dto.DetalleContableDTO.renglon=nrow
+com.pyt.service.dto.DetalleContableDTO.valor=nvalue
+com.pyt.service.dto.DetalleDTO=TBL_DETAIL
+com.pyt.service.dto.DetalleDTO.actividadIca=sicaacitvity
+com.pyt.service.dto.DetalleDTO.categoriaGasto=sspendingcategory
+com.pyt.service.dto.DetalleDTO.centroCosto=scostcenter
+com.pyt.service.dto.DetalleDTO.codigoDocumento=scodedocument
+com.pyt.service.dto.DetalleDTO.concepto=sconcept
+com.pyt.service.dto.DetalleDTO.descripcion=sdescription
+com.pyt.service.dto.DetalleDTO.ejecutadores=
+com.pyt.service.dto.DetalleDTO.impuestoConsumo=nconsumptiontax
+com.pyt.service.dto.DetalleDTO.ingreso=sentry
+com.pyt.service.dto.DetalleDTO.observaciones=sobservation
+com.pyt.service.dto.DetalleDTO.porcentajeDescuento=ndiscountrate
+com.pyt.service.dto.DetalleDTO.porcentajeIva=nivarate
+com.pyt.service.dto.DetalleDTO.renglon=nrow
+com.pyt.service.dto.DetalleDTO.tarifaActividadIca=sactivityrateica
+com.pyt.service.dto.DetalleDTO.tercero=sthird
+com.pyt.service.dto.DetalleDTO.tipoConcepto=sconcepttype
+com.pyt.service.dto.DetalleDTO.valorBruto=ngrossvalue
+com.pyt.service.dto.DetalleDTO.valorConsumo=nconsumptionvalue
+com.pyt.service.dto.DetalleDTO.valorDescuento=ndiscountvalue
+com.pyt.service.dto.DetalleDTO.valorIva=nivavalue
+com.pyt.service.dto.DetalleDTO.valorNeto=nnetworth
